feat(main logic): update func

--- a/src/lib/styles/globals.css
+++ b/src/lib/styles/globals.css
@@ -28,3 +28,11 @@
     max-width: 48rem;
   }
 }
+
+@font-face {
+  font-family: 'electricboots';
+  src:
+    local('electricboots'),
+    url(/fonts/ELECTRICBOOTS.ttf) format('truetype');
+  font-display: swap;
+}
